--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,33 @@
+astropy==2.0.2
+backports.shutil-get-terminal-size==1.0.0
+cvxopt==1.1.8
+Cython==0.23.1
+decorator==4.1.2
 Django==1.9.9
-argparse==1.2.1
 django-suit==0.2.13
+enum34==1.1.6
+freetype-py==1.0.1
+ipython==5.5.0
+ipython-genutils==0.2.0
+matplotlib==1.4.3
+mock==1.0.1
+nose==1.3.7
+numpy==1.13.3
+pathlib2==2.3.0
+pexpect==4.3.0
+pickleshare==0.7.4
+prompt-toolkit==1.0.15
 psycopg2==2.6
-wsgiref==0.1.2
+ptyprocess==0.5.2
+py==1.4.34
+Pygments==2.2.0
+pyparsing==2.0.3
+pytest==3.2.3
+python-dateutil==2.4.2
+pytz==2015.4
+scandir==1.6
+scipy==1.0.0
+simplegeneric==0.8.1
+six==1.9.0
+traitlets==4.3.2
+wcwidth==0.1.7
