--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
-astropy==2.0.2
+astropy==2.0.4
 backports.shutil-get-terminal-size==1.0.0
 cvxopt==1.1.8
+cycler==0.10.0
 Cython==0.23.1
 decorator==4.1.2
 Django==1.9.9
 django-suit==0.2.13
 enum34==1.1.6
 freetype-py==1.0.1
+functools32==3.2.3.post2
 ipython==5.5.0
 ipython-genutils==0.2.0
-matplotlib==1.4.3
+matplotlib==2.0.2
 mock==1.0.1
 nose==1.3.7
 numpy==1.13.3
@@ -28,6 +30,7 @@ pytz==2015.4
 scandir==1.6
 scipy==1.0.0
 simplegeneric==0.8.1
-six==1.9.0
+six==1.11.0
+subprocess32==3.2.7
 traitlets==4.3.2
 wcwidth==0.1.7
