--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ pexpect==4.3.0
 pickleshare==0.7.4
 pluggy==0.6.0
 prompt-toolkit==1.0.15
-psycopg2==2.6
+#psycopg2==2.6
 ptyprocess==0.5.2
 py==1.4.34
 pyparsing==2.0.3
